# Convokit-Mediation-Chatbot

./: README.md  prompts.html  prompts.md  pyproject.toml
src/mediation_demo/: chatbot.py  seller.md  test.py  utils.py  web_assets.py  web_interface.py
